# Ninkasi

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  COPYING.md  Makefile  Makefile.am  README.md  TODO.md  TODO.org  autogen.sh  configure.ac  coroutines.org  crtest.nks  doc.org  genbat.bsh  leaky  test.txt
afl_in/: id:000000,sig:06,src:000550+002981,op:splice,rep:4  id:000000,sig:06,src:011372,op:havoc,rep:2  id:000000,sig:11,src:000000,op:flip1,pos:23412  id:000000,sig:11,src:000000,op:int32,pos:23752,val:be:+1  id:000000,sig:11,src:000001+000090,op:splice,rep:2  id:000000,sig:11,src:000001+000340,op:splice,rep:4  id:000000,sig:11,src:000030,op:havoc,rep:8  id:000000,sig:11,src:000041+000112,op:splice,rep:4  id:000000,sig:11,src:000041,op:havoc,rep:16  id:000000,sig:11,src:000051,op:havoc,rep:128  id:000000,sig:11,src:000060,op:havoc,rep:8  id:000000,sig:11,src:000073+000248,op:splice,rep:4  id:000000,sig:11,src:000079,op:havoc,rep:2  id:000000,sig:11,src:000079,op:havoc,rep:4  id:000000,sig:11,src:000079,op:havoc,rep:8  id:000000,sig:11,src:000085+000048,op:splice,rep:4  id:000000,sig:11,src:000095+000282,op:splice,rep:16  id:000000,sig:11,src:000152+000069,op:splice,rep:128  id:000000,sig:11,src:000153,op:havoc,rep:16  id:000000,sig:11,src:000153,op:havoc,rep:4  id:000000,sig:11,src:000164,op:havoc,rep:2  id:000000,sig:11,src:000173,op:havoc,rep:64  id:000000,sig:11,src:000174,op:havoc,rep:2  id:000000,sig:11,src:000244,op:havoc,rep:4  id:000000,sig:11,src:000419+002632,op:splice,rep:2  id:000000,sig:11,src:000426+002627,op:splice,rep:8  id:000000,sig:11,src:000430+002462,op:splice,rep:8  id:000000,sig:11,src:001961+002646,op:splice,rep:2  id:000000,sig:11,src:002765+001960,op:splice,rep:2  id:000000,sig:11,src:003343+002482,op:splice,rep:8  id:000000,sig:11,src:005091+006657,op:splice,rep:2  id:000000,sig:11,src:005974+006451,op:splice,rep:4  id:000000,sig:11,src:006161+006146,op:splice,rep:4  id:000000,sig:11,src:006338+004453,op:splice,rep:8  id:000000,sig:11,src:006950+004848,op:splice,rep:4  id:000000,sig:11,src:006967+001024,op:splice,rep:8  id:000000,sig:11,src:006994,op:havoc,rep:2  id:000000,sig:11,src:007517+007485,op:splice,rep:4  id:000000,sig:11,src:007768,op:havoc,rep:2  id:000001,sig:06,src:000200,op:havoc,rep:2  (+111 more)
misc/: afl.dict  afl_configure.bsh  afl_how_to_core_dump.txt  afl_prepare_tests.bsh  afl_redo_tests.bsh  afl_run_tests.bsh  afl_save_crashes.bsh  compile_with_address_sanitizer.bsh  genbat.bsh  (+9 more)
src/: Makefile.am  basetype.h  common.h  compiler.c  compiler.h  config.h  dynstr.c  dynstr.h  enums.h  error.c  error.h  expressn.c  expressn.h  failure.c  failure.h  function.c  function.h  main.c  nkcommon.h  nkcompil.c  nkcompil.h  nkconfig.h  nkcorout.c  nkcorout.h  nkdbg.c  nkdbg.h  nkdynstr.c  nkdynstr.h  nkenums.h  nkerror.c  nkerror.h  nkexpr.c  nkexpr.h  nkfail.h  nkfse.c  nkfse.h  nkfunc.c  nkfunc.h  nkfuncid.h  nkgc.c  (+51 more)
src/interp/: README.md  main.c
src/test/: README.md  logging.c  logging.h  main.c  settings.c  settings.h  stuff.c  stuff.h  subtest.c
(+35 files in other folders)
