AM_CFLAGS = -g -Wall
AM_LDFLAGS = -g -Wall
bin_PROGRAMS = ninkasi_test

ninkasi_test_SOURCES = main.c nkcommon.h nkcompil.c nkcompil.h		\
  nkconfig.h nkdbg.c nkdbg.h nkdynstr.c nkdynstr.h nkenums.h		\
  nkerror.c nkerror.h nkexpr.c nkexpr.h nkfail.h nkfunc.c nkfunc.h	\
  nkmem.c nkmem.h nkobjs.c nkobjs.h nkopcode.c nkopcode.h nkopt.c	\
  nkopt.h nkstack.c nkstack.h nkstring.c nkstring.h nktoken.c		\
  nktoken.h nktypes.h nkvalue.c nkvalue.h nkvm.c nkvm.h nkx.c nkx.h

